zno-macro-draft/tests/zno/ui/err/has-duplicated-arguments.stderr
error: duplicated arguments
 --> tests/ui/err/has-duplicated-arguments.rs:3:1
  |
3 | #[zno(name = "Name", name = "Name")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `zno` (in Nightly builds, run with -Z macro-backtrace for more info)
