zno-macro-draft/tests/zno/ui/err/has-duplicated-arguments.rs
use zno::zno;

#[zno(name = "Name", name = "Name")]
fn f() {}

fn main() {}
